Update notebooks, remove obsolete baselines

--- a/01_Intro_to_environment.ipynb
+++ b/01_Intro_to_environment.ipynb
@@ -52,7 +52,7 @@
     "# Setup for use in Colab\n",
     "if 'google.colab' in sys.modules:\n",
     "    # Clone GitHub repository\n",
-    "    !git clone https://github.com/MasterScrat/droneRL-workshop.git --single-branch --branch updated-workshop\n",
+    "    !git clone https://github.com/MasterScrat/droneRL-workshop.git --single-branch\n",
     "        \n",
     "    # Install packages via pip\n",
     "    !pip install -r \"droneRL-workshop/colab-requirements.txt\"\n",
