--- a/02_Intro_to_Q_learning_and_DQN.ipynb
+++ b/02_Intro_to_Q_learning_and_DQN.ipynb
@@ -97,8 +97,6 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "import os"
@@ -125,11 +123,12 @@
     "colab": {}
    },
    "source": [
-    "%run env/env.py\n",
-    "%run helpers/rl_helpers.py\n",
-    "%run agents/dqn.py\n",
-    "%run agents/qlearning.py\n",
-    "%run agents/random.py"
+    "from env.env import DeliveryDrones\n",
+    "from env.wrappers import CompassQTable, LidarCompassQTable, LidarCompassChargeQTable, WindowedGridView\n",
+    "from agents.random import RandomAgent\n",
+    "from agents.qlearning import QLearningAgent\n",
+    "from agents.dqn import DQNAgent, DenseQNetworkFactory, ConvQNetworkFactory\n",
+    "from helpers.rl_helpers import MultiAgentTrainer, plot_rolling_rewards, test_agents, plot_cumulative_rewards, render_video, set_seed"
    ],
    "execution_count": 0,
    "outputs": []
