--- a/02_Intro_to_Q_learning_and_DQN.ipynb
+++ b/02_Intro_to_Q_learning_and_DQN.ipynb
@@ -128,7 +128,7 @@
     "from agents.random import RandomAgent\n",
     "from agents.qlearning import QLearningAgent\n",
     "from agents.dqn import DQNAgent, DenseQNetworkFactory, ConvQNetworkFactory\n",
-    "from helpers.rl_helpers import MultiAgentTrainer, plot_rolling_rewards, test_agents, plot_cumulative_rewards, render_video, set_seed"
+    "from helpers.rl_helpers import MultiAgentTrainer, plot_rolling_rewards, test_agents, plot_cumulative_rewards, render_video, set_seed, ColabVideo"
    ],
    "execution_count": 0,
    "outputs": []
@@ -849,7 +849,7 @@
     "\n",
     "# Create the agents\n",
     "agents = {drone.index: RandomAgent(env) for drone in env.drones}\n",
-    "agents[0] = my_agent = DQNAgent(\n",
+    "agents[0] = DQNAgent(\n",
     "    env, ConvQNetworkFactory(env, conv_layers=[\n",
     "        {'out_channels': 32, 'kernel_size': 3, 'stride': 1, 'padding': 1},\n",
     "        {'out_channels': 32, 'kernel_size': 3, 'stride': 1, 'padding': 1},\n",
