--- a/01_Intro_to_environment.ipynb
+++ b/01_Intro_to_environment.ipynb
@@ -74,7 +74,7 @@
     "colab": {}
    },
    "source": [
-    "%cd droneRL-workshop"
+    "%cd /content/droneRL-workshop"
    ],
    "execution_count": 0,
    "outputs": []
@@ -88,10 +88,6 @@
    },
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "from PIL import Image\n",
     "from IPython.lib.pretty import pretty"
@@ -215,10 +211,7 @@
     "env = DeliveryDrones()\n",
     "\n",
     "# Use an observation wrappers\n",
-    "#env = CompassQTable(env)\n",
-    "env = CompassChargeQTable(env)\n",
-    "#env = LidarCompassQTable(env)\n",
-    "#env = LidarCompassChargeQTable(env)\n",
+    "env = CompassQTable(env)\n",
     "\n",
     "# Reset the environment and print inital observation\n",
     "observation = env.reset()\n",
@@ -578,7 +571,7 @@
     "Visualize a \"run\"\n",
     "---\n",
     "\n",
-    "Share videos of your best agents! `#desiRL` `#droneRL`"
+    "Share videos of your best agents! `#AMLD2024` `#droneRL`"
    ]
   },
   {
@@ -638,12 +631,15 @@
    "cell_type": "markdown",
    "metadata": {
     "id": "eYpacPiJoo4t",
-    "colab_type": "text"
+    "colab_type": "text",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Download the file `output/agents/first-agent.pt` and submit it:\n",
     "\n",
-    "https://www.aicrowd.com/challenges/droneracer"
+    "https://www.aicrowd.com/challenges/dronerl"
    ]
   }
  ]
