--- a/02_Intro_to_Q_learning_and_DQN.ipynb
+++ b/02_Intro_to_Q_learning_and_DQN.ipynb
@@ -82,7 +82,7 @@
     "colab": {}
    },
    "source": [
-    "%cd droneRL-workshop"
+    "%cd /content/droneRL-workshop"
    ],
    "execution_count": 0,
    "outputs": []
